--- a/examples/app.css
+++ b/examples/app.css
@@ -1,15 +1,54 @@
+:root {
+  --text-color: #f3f3f3;
+  --border: 1px solid var(--text-color);
+}
+
 body {
   background-color: #000000;
 }
 
 h1 {
-  color: #f3f3f3;
+  color: var(--text-color);
   font-family: Arial;
   text-transform: uppercase;
   font-size: 3rem;
   font-style: italic;
   text-align: center;
 }
+
+nav {
+  position: absolute;
+  right: 20px;
+}
+
+nav ul {
+  display: flex;
+}
+
+nav li {
+  list-style-type: none;
+  display: inline-block;
+  padding: 0px 10px;
+  border-right: var(--border);
+  border-bottom: var(--border);
+  border-top: var(--border); 
+}
+
+nav li:not(:last-child) {
+  border-left: var(--border);
+}
+
+nav li:hover {
+  background-color: #333333;
+}
+
+nav a {
+  text-decoration: none;
+  color: #f3f3f3;
+  font-family: monospace;
+  font-size: 1rem;
+}
+
 
 .cards {
   display: grid;
@@ -23,7 +62,7 @@ h1 {
 
 .card {
   display: grid;
-  border: 2px solid #000000;
+  border: 2px solid var(--text-color);
   border-radius: 4px;
   padding: .5rem;
   text-align: center;
@@ -32,20 +71,23 @@ h1 {
 }
 
 .card:hover {
-  border-color: #f3f3f3;
-  transition: border-color .33s ease-in;
+  transform: scale(1.025);
+  transition: all .2s ease-in-out;
 
 }
 
 .card a {
   text-decoration: none;
+  display: grid;
+  height: 100%;
+  align-items: end;
 }
 
 .card img {
-  max-width: 200px;
+  max-width: 100%;
 }
 
 .card h2 {
-  color: #f3f3f3;
+  color: var(--text-color);
   font-family: Arial;
 }
