improvements to example page

--- a/examples/app.css
+++ b/examples/app.css
@@ -1,20 +1,14 @@
 :root {
   --text-color: #f3f3f3;
   --border: 1px solid var(--text-color);
+  --grid-break: 960px;
+  --font-family-mono: Courier New, monospace;
 }
 
 body {
   background-color: #000000;
 }
 
-h1 {
-  color: var(--text-color);
-  font-family: Arial;
-  text-transform: uppercase;
-  font-size: 3rem;
-  font-style: italic;
-  text-align: center;
-}
 
 nav {
   position: absolute;
@@ -32,10 +26,11 @@ nav li {
   border-right: var(--border);
   border-bottom: var(--border);
   border-top: var(--border); 
+  border-left: var(--border);
 }
 
-nav li:not(:last-child) {
-  border-left: var(--border);
+nav li:not(:last-child):not(only-child) {
+  border-right: none;
 }
 
 nav li:hover {
@@ -45,26 +40,47 @@ nav li:hover {
 nav a {
   text-decoration: none;
   color: #f3f3f3;
-  font-family: monospace;
+  font-family: var(--font-family-mono);
   font-size: 1rem;
+}
+
+.main {
+  display: grid;
+  grid-template-columns: auto;
+  grid-template-rows: auto;
+  grid-gap: 1rem;
+  max-width: 1525px;
+  margin: 0 auto;
+}
+
+h1 {
+  color: var(--text-color);
+  font-family: Arial;
+  text-transform: uppercase;
+  font-size: 4rem;
+  font-style: italic;
+  text-align: left;
+  grid-area: 1 / 1;
 }
 
 
 .cards {
   display: grid;
-  max-width: 760px;
   margin: 0 auto;
-  grid-template-columns: repeat(auto-fill, minmax(200px,1fr));
+  grid-template-columns: repeat(3, minmax(300px,max-content));
   grid-template-rows: auto;
   grid-gap: 1rem;
-  text-align: center;
+}
+
+@media (max-width: 960px) {
+  .cards {
+    grid-template-columns: repeat(auto-fill,minmax(300px,max-content));
+  }
 }
 
 .card {
   display: grid;
-  border: 2px solid var(--text-color);
-  border-radius: 4px;
-  padding: .5rem;
+  padding: 1rem;
   text-align: center;
   align-items: end;
   cursor: pointer;
@@ -78,16 +94,31 @@ nav a {
 
 .card a {
   text-decoration: none;
-  display: grid;
   height: 100%;
   align-items: end;
+  display: grid;
+  grid-template-rows: min-content max-content;
 }
 
 .card img {
   max-width: 100%;
+  margin: 0 auto;
 }
 
 .card h2 {
   color: var(--text-color);
   font-family: Arial;
+  font-size: 1.5rem;
+  writing-mode: sideways-lr;
+  margin: 0px;
+  align-self: baseline;
+  grid-area: 1 / 1;
+  font-weight: bold;
+  letter-spacing: 1px;
+}
+
+@media (max-width: 620px) {
+  .card h2 {
+    writing-mode: horizontal-tb;
+  }
 }
