--- a/examples/app.css
+++ b/examples/app.css
@@ -139,6 +139,7 @@ h2 {
   font-weight: bold;
   letter-spacing: 1px;
   transform: rotate(-180deg);
+  margin-bottom: 3px;
 }
 
 @media (max-width: 620px) {
